<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#7ec4b5"
       android:orientation="vertical">

       <include layout="@layout/tool_bar_layout" />

       <com.google.android.material.tabs.TabLayout
           android:id="@+id/tabLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:tabIndicatorColor="@color/black"
           app:tabSelectedTextColor="@color/black"
           android:background="#7ec4b5"
           >

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/snf" />

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/clr" />

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/weight" />


       </com.google.android.material.tabs.TabLayout>

       <androidx.viewpager2.widget.ViewPager2
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/viewPager" />

   </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/menu"
        app:headerLayout="@layout/header_layout"
        android:layout_gravity="start" />
</androidx.drawerlayout.widget.DrawerLayout>